error: cant get tokens for test network amoy & mumbai

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^16.4.7",
     "ethers": "^5.7.2",
     "hardhat": "^2.22.17"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
   }
 }
